fix: adjust padding and text alignment in children class of Calculator.css; update body styles in index.css

--- a/client/src/app/components/calculator/Calculator.css
+++ b/client/src/app/components/calculator/Calculator.css
@@ -33,7 +33,9 @@
   border: none;
   border-radius: 25px;
   box-shadow: var(--box-shadow);
-  padding: 12px 8px 8px 15px
+  padding: 12px;
+  text-align: center;
+  overflow-wrap: break-word;
 }
 
 .div1 {
