--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,12 +6,17 @@
   src: url("/Comfortaa.ttf") format("truetype");
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Comfortaa", sans-serif;
-  font-weight: 600;
-}
+* {
+    box-sizing: border-box;
+  }
+  
+  html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
+  }
 
 :root {
   --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
